2014-01-12  Sam Weinig  <sam@webkit.org>

        TextBreakIterator's should support Latin-1 for all iterator types (Part 1)
        https://bugs.webkit.org/show_bug.cgi?id=126856

        Reviewed by Darin Adler.

        - Do some initial cleanup before adding complete Latin-1 support.

        * platform/text/TextBreakIterator.cpp:
        Remove non-ICU acquireLineBreakIterator() implementation.

        * platform/text/TextBreakIterator.h:
        - Changes acquireLineBreakIterator() to take a StringView.

        * platform/text/TextBreakIteratorICU.cpp:
        - Refactor iterator initialization and setting of text on the iterator.
        - Add support for using a Latin-1 provider (this is not currently used).

        * platform/text/icu/UTextProviderLatin1.cpp:
        * platform/text/icu/UTextProviderLatin1.h:
        - Add back non-context aware Latin-1 provider (from r129662).
        - Rename context aware provider.

        * platform/text/icu/UTextProviderUTF16.cpp:
        * platform/text/icu/UTextProviderUTF16.h:
        - Rename context aware provider.

2014-01-12  Brent Fulgham  <bfulgham@apple.com>

        [WebGL] Error messages should use source code labels, not internal mangled symbols.
        https://bugs.webkit.org/show_bug.cgi?id=126832

        Reviewed by Dean Jackson.

        Revised fast/canvas/webgl/glsl-conformance.html.

        * platform/graphics/ANGLEWebKitBridge.cpp:
        (WebCore::getSymbolInfo): Correct missing 'break'.
        (WebCore::ANGLEWebKitBridge::compileShaderSource): Call 'getSymbolInfo'
        for SH_VARYINGS.
        * platform/graphics/GraphicsContext3D.h: Add new declarations.
        * platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
        (WebCore::GraphicsContext3D::compileShader): Demangle log output.
        (WebCore::GraphicsContext3D::mappedSymbolName): Added.
        (WebCore::GraphicsContext3D::getUnmangledInfoLog): Added.